fix heder alignment on profile page

--- a/src/components/ProfilePage/ProfileImages/ProfileImages.module.css
+++ b/src/components/ProfilePage/ProfileImages/ProfileImages.module.css
@@ -1,8 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   max-width: 1330px;
 }
